--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Cody Wong"
 title_separator          : "-"
 name                     : &name "Cheng-Shih Wong"
-description              : &description "Research assistant at Academia Sinica"
+description              : &description "Software engineer at Google"
 url                      : https://mob5566.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mob5566/mob5566.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Cheng-Shih Wong"
   avatar           : "profile.png"
-  bio              : "Research assistant at Academia Sinica, Taipei, Taiwan"
+  bio              : "Software engineer at Google, New Taipei City, Taiwan"
   location         : "New Taipei City, Taiwan"
   employer         :
   pubmed           :
